--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta title="Odin Recipes">
+        <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
