--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/lumpia.html">Lumpiang Shanghai</a>
+        <a href="./recipes/pizza.html">Pizza</a>
+        <a href="./recipes/kelaguen.html">Kelaguen</a>
     </body>
 </html>
