Add links to a list

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lumpia.html">Lumpiang Shanghai</a>
-        <a href="./recipes/pizza.html">Pizza</a>
-        <a href="./recipes/kelaguen.html">Kelaguen</a>
+        <ul>
+            <li><a href="./recipes/lumpia.html">Lumpiang Shanghai</a></li>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/kelaguen.html">Kelaguen</a></li>
+        </ul>
     </body>
 </html>
