Add images to recipe pages

--- a/recipes/kelaguen.html
+++ b/recipes/kelaguen.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Beef Kelaguen Recipe</h1>
+        <img src="../images/kelaguen.jpg" title="photo by victor consaga">
     </body>
 </html>
