Add kelaguen.html page content

--- a/recipes/kelaguen.html
+++ b/recipes/kelaguen.html
@@ -8,5 +8,20 @@
     <body>
         <h1>Beef Kelaguen Recipe</h1>
         <img src="../images/kelaguen.jpg" title="photo by victor consaga">
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 ½ cups lemon juice, or as needed</li>
+            <li>2 tablespoons soy sauce</li>
+            <li>Tabasco to taste</li>
+            <li>2 pounds beef flank steak, very thinly sliced against the grain</li>
+            <li>1 bunch green onions, thinly sliced</li>
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Pour lemon juice, soy sauce, and Tabasco into a large, glass bowl. Stir in beef and green onions. Add additional lemon juice if needed to cover the beef.</li>
+            <li>Cover the bowl with plastic wrap, and allow to rest at room temperature for 1 hour, until meat turns a grayish-brown color and appears cooked.</li>
+        </ol>
     </body>
 </html>
