Add link back to index.html

--- a/recipes/kelaguen.html
+++ b/recipes/kelaguen.html
@@ -23,5 +23,6 @@
             <li>Pour lemon juice, soy sauce, and Tabasco into a large, glass bowl. Stir in beef and green onions. Add additional lemon juice if needed to cover the beef.</li>
             <li>Cover the bowl with plastic wrap, and allow to rest at room temperature for 1 hour, until meat turns a grayish-brown color and appears cooked.</li>
         </ol>
+        <a href="../index.html">Back to home</a>
     </body>
 </html>
