--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -41,5 +41,6 @@
             <li>Slide 3 to 4 lumpia into the hot oil, making sure the seams are facing down. Fry, turning occasionally, until all sides are golden brown, 1 to 2 minutes. Transfer to a paper towel-lined plate to drain. Repeat to fry remaining lumpia.</li>
             <li>Serve immediately. Enjoy!</li>
         </ol>
+        <a href="../index.html">Back to home</a>
     </body>
 </html>
